[GTK] Fix logic of dark theme detection https://bugs.webkit.org/show_bug.cgi?id=202276

- If GTK_THEME is set it has a higher priority to GtkSettings.
- GTK_THEME may be a -dark theme or :dark variant, handle both.

Reviewed by Michael Catanzaro.

* UIProcess/API/gtk/PageClientImpl.cpp:
(WebKit::PageClientImpl::effectiveAppearanceIsDark const):


Canonical link: https://commits.webkit.org/215821@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250388 268f45cc-cd09-0410-ab3c-d52691b4dbfc